# smolrend

./: .editorconfig  CMakeLists.txt  README.md
src/: main.cpp
